Fix button (icon-only) spacing issue

--- a/_auk-button.scss
+++ b/_auk-button.scss
@@ -60,7 +60,7 @@ a.auk-button {
 }
 
 .auk-button--icon {
-  padding: 0.8rem 0.85rem;
+  padding: 0.75rem 0.85rem;
 }
 
 .auk-button--block {
